compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencySimple/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencySimple/source.kt:7:7: error: cannot access class 'a.A'. Check your module classpath for missing or conflicting dependencies
    b.foo()
      ^^^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencySimple/source.kt:10:21: error: type mismatch: inferred type is A but String was expected
    val x: String = b.foo()
                    ^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencySimple/source.kt:10:23: error: cannot access class 'a.A'. Check your module classpath for missing or conflicting dependencies
    val x: String = b.foo()
                      ^^^
COMPILATION_ERROR
